@@ -156,6 +156,7 @@
     <Compile Include="DpExtensions.cs" />
     <Compile Include="Enums\DeleteAnimation.cs" />
     <Compile Include="Enums\EdgeDashStyle.cs" />
+    <Compile Include="Enums\LogicCoreChangedAction.cs" />
     <Compile Include="Enums\MouseOverAnimation.cs" />
     <Compile Include="Enums\MoveAnimation.cs" />
     <Compile Include="GeometryHelper.cs" />
